syntax = "proto2";

package Zko;

import "./shaders.proto";
import "./material.proto";

message ZkModel {
  required string id = 1;
  required string name = 2;

  required ZkTransform transform = 3;

  required ZkShaderProgram shaderProgram = 4;
  required ZkMesh mesh = 5;
  optional ZkMaterial material = 6;
}

message ZkMesh {
  map<string, ZkBufferKey> bufferKeys = 1;
  map<string, ZkBuffer> buffers = 2;
}

message ZkBufferKey {
  required uint32 id = 1;
  required ZDataType dataType = 2;
  required uint32 size = 3;
  required uint32 count = 4;
  required bool normalized = 5;
  required uint32 offset = 6;
  required uint32 stride = 7;
  required bool isIndexBuffer = 8;
  required uint32 bufferId = 9;
}

message ZkBuffer {
  required uint32 id = 1;
  required bytes dataArray = 2;
}
